# qwen-tts-gui

./: .dockerignore  .env.dev  .env.example  .gitignore  Dockerfile  README.md  docker-compose.unraid.yml  docker-compose.yml  justfile
backend/: auth.py  config.py  logging_config.py  main.py  pyproject.toml
backend/api/: personality_routes.py  personality_schemas.py  routes.py  schemas.py
backend/scripts/: download_models.py
backend/services/: audio_enhancement_service.py  mock_service.py  personality_service.py  tts_service.py  whisper_service.py
backend/tests/: conftest.py  test_personalities.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AudioEditor.tsx  AudioPlayer.tsx  CustomVoice.tsx  FileUpload.tsx  Layout.tsx  ModelSizeSelector.tsx  Personalities.tsx  PersonalityForm.tsx  PersonalityGenerate.tsx  TabNav.tsx  VoiceClone.tsx  VoiceDesign.tsx
frontend/src/context/: ConfigContext.tsx
frontend/src/hooks/: useAudioEditor.ts  usePersonalities.ts  useTTS.ts
frontend/src/styles/: globals.css
scripts/: start.sh
unraid/: qwen-tts.xml
