[project]
name = "qwen-tts-backend"
version = "1.0.0"
description = "Self-hosted Qwen3-TTS Web GUI Backend"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.19",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
# Audio enhancement dependencies (DeepFilterNet noise suppression + LavaSR bandwidth extension)
enhancement = [
    "deepfilternet>=0.5",
    "LavaSR @ git+https://github.com/ysharma3501/LavaSR.git",
    "soundfile>=0.12.1",
]
# Full TTS dependencies (for production with GPU)
tts = [
    "qwen-tts>=0.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "faster-whisper>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
# Use PyTorch CUDA 12.4 wheels (compatible with CUDA 12.4-12.9 drivers)
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
